--- a/src/main/webapp/app/shared/layout/footer/footer.scss
+++ b/src/main/webapp/app/shared/layout/footer/footer.scss
@@ -1,3 +1,8 @@
 .footer {
   height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000; /* Bordure d'épaisseur 1px en noir */
+  padding: 10px; /* Espace intérieur autour du texte */
 }
